# strands-deepsearch-agent

./: Dockerfile  README copy.md  README.md  docker-compose.yml  migration_guide.md
backend/: .env.example  ORCHESTRATOR_IMPLEMENTATION.md  debug_deepseek_tools.py  pyproject.toml  run_backend.bat  run_backend.sh  test_deepseek.py
backend/src/agent/: __init__.py  app.py  configuration.py  main.py  research_agent.bak  research_agent.py  utils.py
backend/src/agent/tools/: README.md  __init__.py  agent_creation_tools.py  enhanced_search.py  language_tools.py  model_tools.py  report_tools.py  research_tools.py  web_search.py
backend/src/agent/utils/: __init__.py  aws_credentials.py  language_detector.py
docs/: infra.dot
frontend/: index.html  package-lock.json  package.json  test_search_summary_display.html  test_search_summary_fix.html
frontend/src/: App.tsx  global.css
frontend/src/components/: ActivityTimeline.tsx  ChatMessagesView.tsx  Footer.tsx  Header.tsx  InputForm.tsx  ResearchStagePanel.tsx  StageOutputViewer.tsx  StreamingReport.tsx  WelcomeScreen.tsx
frontend/src/components/ui/: progress.tsx
frontend/src/hooks/: useResearchAgent.ts
frontend/src/utils/: exportUtils.ts
